--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           source: ./
           destination: ./_site
+          baseurl: /yeti-build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
