fix: jekyll config

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@
 
 # Site settings
 title: yeti-build
+repository: https://github.com/freelancerDen/yeti-build
 baseurl: /yeti-build # the subpath of your site, e.g. /blog
-
+url: https://freelancerden.github.io
